fix spacing and padding for header and description components on homepage

--- a/components/FeaturedArtistCard/FeaturedArtistCard.module.scss
+++ b/components/FeaturedArtistCard/FeaturedArtistCard.module.scss
@@ -1,5 +1,5 @@
 .FeaturedArtistCard {
-  height: 25rem;
+  height: 20rem;
   width: 15.313rem;
   max-width: 15.313rem;
   box-sizing: border-box; /* Ensures padding and borders are included in the width */
