--- a/components/FrontPageContainer/FrontPageContainer.module.scss
+++ b/components/FrontPageContainer/FrontPageContainer.module.scss
@@ -8,7 +8,7 @@
 
 .front-page-container {
   padding-top: 3rem;
-  padding-bottom: 3rem;
+  // padding-bottom: 3rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -42,9 +42,17 @@
     padding-bottom: 3rem;
   }
 
+  div.featured-artists.header-and-desc {
+    padding-bottom: 1rem;
+  }
+
   div.featured-artists,
   div.browse-by {
     border-top: 1px solid black;
+  }
+
+  div.browse-by {
+    padding-bottom: 2rem;
   }
 }
 
